# Medical-Assistant-with-Mlops

./: .env.example  .flake8  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yml  pytest.ini  requirements.dev.txt  requirements.prod.txt  run_tests.sh
backend/: .dockerignore  .flake8  Dockerfile  database.py  locust_test.py  main.py  pyproject.toml
backend/agent_cypher/: main.py  pyproject.toml  requirements.dev.txt  requirements.prod.txt
backend/agent_cypher/agents/: hospital_rag_agent.py
backend/agent_cypher/chains/: hospital_cypher_chain.py  hospital_review_chain.py
backend/agent_cypher/docs/: custome_tool_agent.md
backend/agent_cypher/models/: coversation_his.py
backend/agent_cypher/tools/: cypher_tool.py  review_tool.py
backend/agent_cypher/utils/: config.py  helper.py
backend/agents/: hospital_rag_agent.py
backend/app/: database.py  schemas.py
backend/app/controller/: __init__.py  agent.py  (+3 more)
backend/chains/: healthcare_chain.py  hospital_cypher_chain.py  hospital_review_chain.py
backend/chatbot_dsm5/: .gitignore  requirements.txt
backend/docs/: Evaludate_rag.md  Locust_Params.md  RetrievalQA.md  Troubleshooting.md  agent_tools.md  fastapi_coroutine.md  neo4j-tutorial.md  note.md
backend/evaluator/: agent_tools.py  rag_cypher.py  rag_dsm5.py
backend/mlops/: __init__.py  instrument.py  instrument_monitering.py  instrument_tracing.py
backend/process_data/: etl_n4oj.py  index_elastic.py  index_neo4j.py
backend/prompt/: evaluate.py  hospital_prompt.py
backend/scripts/: etl_n4oj.py  insert_embedding.py
backend/tests/: conftest.py  requirements.txt  test_auth.py  test_conversations.py  test_cypher.py  test_dsm5.py  test_health.py  test_integration.py  test_messages.py
backend/tools/: __init__.py  cypher_tool.py  health_tool.py  review_tool.py  wait_times.py
backend/utils/: __init__.py  config.py  helper.py  logging.py
(+85 files in other folders)
