[project]
name = "agent-cypher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "neo4j==5.14.1",
  "retry==0.9.2",
  "python-dotenv==1.1.1",
  "loguru==0.7.3",
  "redis==6.4.0",
  "langchain==0.2.17",
  "langchain-openai==0.1.25",
  "google-generativeai==0.7.2",
  "langchain-google-genai==1.0.8",
  "openai==1.109.1",
  "langchain-community==0.2.19",
  "langchain-core==0.2.43",
  "opentelemetry-api==1.22.0",
  "pydantic==2.7.4",
  "uvicorn>=0.27.0",
  "asyncio==3.4.3",
  "fastapi>=0.109.0",
  "starlette>=0.36.0",
  "numpy==1.26.2",
  "elasticsearch==8.13.0",
  "pdfplumber>=0.11.8",
  "pydantic-core>=2.18.4",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-instrumentation-fastapi>=0.43b0",
  "opentelemetry-exporter-prometheus>=0.43b0",
  "opentelemetry-exporter-otlp>=1.22.0",
]


[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "ruff>=0.1.0",
  "ragas==0.2.14",
  "langchain-groq>=0.1.10",
  "rapidfuzz>=3.14.3",
  "pypdf>=6.5.0",
  "flake8>=7.3.0",
  "isort>=7.0.0",
  "locust>=2.43.0",
]
